Add JVM options --add-exports javafx.base/com.sun.javafx.event=ALL-UNNAMED